--- a/script/vsts/pull-requests.yml
+++ b/script/vsts/pull-requests.yml
@@ -1,9 +1,13 @@
-trigger: none  # No CI builds, only PR builds
+trigger:
+- jr/debug-19148
 
 resources:
   containers:
   - container: atom-linux-ci
     image: daviwil/atom-linux-ci:latest
+    env:
+      - CI: true
+      - CI_PROVIDER: VSTS
 
 jobs:
 
